--- a/src/pages/CadastroName/index.html
+++ b/src/pages/CadastroName/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -8,9 +9,368 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/phosphor-icons"></script>
-    <title>Document</title>
+    <img src="../assets/Gas.png" alt="">
+    <title>Cadastro</title>
+
+
+
+    <style>
+        body {
+
+            margin: 0;
+            padding: 0;
+            background-color: #fff;
+            font-family: 'Roboto', sans-serif;
+        }
+
+        .Container {
+            width: auto;
+            height: auto;
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            padding-bottom: 20px;
+
+            background: #FFFFFF;
+        }
+
+        .ImageContainer {
+            width: 100%;
+            height: 260px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+
+            background: #5F9DF7;
+
+            @media (max-width: 720px) {
+                height: 260px;
+
+                @media(max-width: 520px) {
+                    height: 200px;
+                }
+            }
+
+        }
+
+        .Image {
+            width: 50%;
+
+            padding-bottom: 60px;
+
+            @media (max-width: 720px) {
+                padding-bottom: 40px;
+                width: 40%;
+
+            }
+        }
+
+        .InputContact {
+            width: 50%;
+
+            border-radius: 5px;
+            border: none;
+            outline: 0;
+
+            padding-left: 3px;
+
+            font-family: 'Roboto', sans-serif;
+            font-size: 18px;
+            background: #E1E1E8;
+
+        }
+
+        .InputContainer {
+            display: flex;
+            justify-content: center;
+            width: 60%;
+            height: 40px;
+            gap: 10px;
+
+            display: flex;
+
+            border: none;
+            outline: 0;
+            border-radius: 3px;
+
+            margin-top: 30px;
+
+            font-family: 'Roboto', sans-serif;
+            font-size: 18px;
+
+            @media (max-width: 720px) {
+
+                width: 35%;
+
+                @media(max-width: 620px) {
+                    width: 50%;
+
+                    @media(max-width: 520px) {
+                        width: 60%;
+
+                        @media(max-width: 420px) {
+                            width: 70%;
+
+                            @media(max-width: 320px) {
+                                width: 80%;
+
+                            }
+
+                        }
+
+                    }
+
+                }
+
+            }
+
+        }
+
+        .Title {
+            font-family: 'Roboto', sans-serif;
+            font-size: 12px;
+            color: #47474D;
+            padding-top: 8px;
+        }
+
+        .ButtonContainer {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            margin-top: 10px;
+        }
+
+        .Button {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            width: 50px;
+            height: 50px;
+            border: none;
+            background: #5F9DF7;
+            border-radius: 50px;
+            color: #ffffff;
+        }
+
+        .TitleButton {
+
+            font-family: 'Roboto', sans-serif;
+            font-weight: bold;
+            font-size: 12px;
+            color: #47474D;
+            align-items: center;
+        }
+
+
+
+
+        .Card {
+            display: flex;
+            justify-content: center;
+
+            z-index: 1;
+            width: 100%;
+            margin-top: -120px;
+
+            position: static;
+
+            @media (max-width: 720px) {
+                margin-top: -100px;
+            }
+
+        }
+
+        .ButtonProps {
+            width: 100%;
+            margin-top: 20px;
+
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: space-evenly;
+        }
+
+        /* Style Card */
+
+        .cards {
+            width: 90%;
+            height: 120px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            align-items: center;
+            background-color: #FFFFFF;
+            border-radius: 5px;
+            margin-top: 20px;
+            border-bottom: 1px solid #AEAEB3;
+        }
+
+        .logoGasNameContainer {
+            width: 41px;
+            height: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border-top-left-radius: 5px;
+            border-bottom-left-radius: 5px;
+            color: #FFFFFF;
+            background-color: #03B252;
+        }
+
+        .logoGasName {
+            font-size: 12px;
+            font-weight: bold;
+            transform: rotate(-0.25turn);
+        }
+
+        .cardDetailContainer {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            width: 95%;
+            height: 90%;
+            padding: 15px;
+        }
+
+        .titleStore {
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 15;
+            color: #7A7A80;
+        }
+
+        .storeDetails {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between
+        }
+
+        .noteContainer {
+
+            font-size: 12px;
+            font-weight: 500;
+
+
+        }
+
+        .noteTitle {
+            font-size: 12px;
+            font-weight: 500;
+
+            color: #7A7A80;
+        }
+
+        .noteNumber {
+            display: flex;
+            font-weight: bold;
+            font-size: 18px;
+
+            display: flex;
+            align-items: center;
+            gap: 2px;
+
+        }
+
+        /* .timeContainer{}; */
+
+        .timeTitle {
+            font-size: 12px;
+            font-weight: 500;
+
+            color: #7A7A80;
+        }
+
+        .timeNumber {
+            font-weight: bold;
+            font-size: 18px;
+        }
+
+        .valorTitle {
+            font-size: 12px;
+            font-weight: 500;
+
+            color: #7A7A80;
+        }
+
+        .valorNumber {
+            font-weight: bold;
+            font-size: 18px;
+        }
+
+        /* Style Card Finish */
+    </style>
+
 </head>
+
 <body>
-    <H1>CadastroName</H1>
+    <div class='Container'>
+        <div class='ImageContainer'>
+            <!-- <img class='Image' src="../assets/Gas.png" alt="gas"> -->
+        </div>
+
+
+        <div class='Card'>
+            <!-- Card config initial -->
+            <div class='cards' id="lblcards">
+                <div class='logoGasNameContainer' id="lbllogoGasNameContainer">
+                    <p class='logoGasName' id="lbllogoGasName">
+                        SupergasBraz
+                    </p>
+                </div>
+
+                <div class='cardDetailContainer' id="lblcardDetailContainer">
+
+                    <p class='titleStore' id="lbltitleStore"> Tonho Gas </p>
+
+                    <div class='storeDetails' id="lblstoreDetails">
+                        <div class='noteContainer' id="lblnoteContainer">
+                            <p class='noteTitle' id="lblnoteTitle"> Nota </p>
+                            <p class='noteNumber' id="lblnoteNumber">
+                                <b>4.8</b>
+                                <i class='ph-star-fill' style="font-size:15px; color: #ffd700;" id="lbliconstar"></i>
+                            </p>
+                        </div>
+                        <div class='timeContainer' id="lbltimeContainer">
+                            <p class='timeTitle' id="lbltimeTitle"> Tempo Médio </p>
+                            <p class='timeNumber'><b>40-30</b> min</p>
+                        </div>
+                        <div class='valorContainer' id="lblvalorContainer">
+                            <p class='valorTitle' id="lblvalorTitle"> Preço </p>
+                            <p class='valorNumber' id="lblvalorNumber"> R$<b>79</b>,99 </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div> <!-- Card config finish -->
+
+        <div class='InputContainer'>
+            <input class='InputDDD' placeholder="DDD" maxLength={2} minLength={1} type="number" />
+            <input class='InputContact' placeholder="Seu Telefone" maxLength={10} minLength={1} type="number" />
+        </div>
+
+
+        <p class='Title'> Usaremos seu número de telefone para informá-lo(a) </p>
+        <p class='Title'> sobre sua entrega.</p>
+        <div class='ButtonProps'>
+            <div class='ButtonContainer'>
+                <buttom class="Button">
+                    <i class="ph-caret-left" style="font-size: 24px; color: #FFFFFF; font-weight: bold;"></i>
+                </buttom>
+                <p class='TitleButton'>Voltar</p>
+            </div>
+
+            <div class='ButtonContainer'>
+                <buttom class="Button">
+                    <i class="ph-caret-right" style="font-size: 24px; color: #FFFFFF; font-weight: bold;"></i>
+                </Buttom>
+                <p class='TitleButton'>Próximo</p>
+            </div>
+        </div>
+
+    </div>
 </body>
+
 </html>
