--- a/src/pages/Cadastro/index.html
+++ b/src/pages/Cadastro/index.html
@@ -11,12 +11,9 @@
     <script src="https://unpkg.com/phosphor-icons"></script>
     <img src="../assets/Gas.png" alt="">
     <title>Cadastro</title>
-    
-
 
     <style>
         body {
-
             margin: 0;
             padding: 0;
             background-color: #fff;
@@ -38,20 +35,19 @@
 
         .ImageContainer {
             width: 100%;
-            height: 260px;
+            height: 50vh;
             display: flex;
             align-items: center;
             justify-content: center;
 
             background: #5F9DF7;
 
-            @media (max-width: 720px) {
-                height: 260px;
 
-                @media(max-width: 520px) {
-                    height: 200px;
-                }
+
+            @media(max-width: 520px) {
+                height: 200px;
             }
+
 
         }
 
