--- a/src/pages/CadastroName/index.html
+++ b/src/pages/CadastroName/index.html
@@ -16,7 +16,6 @@
 
     <style>
         body {
-
             margin: 0;
             padding: 0;
             background-color: #fff;
@@ -24,6 +23,7 @@
         }
 
         .Container {
+            margin: 0;
             width: auto;
             height: auto;
 
@@ -68,7 +68,7 @@
         }
 
         .InputContact {
-            width: 50%;
+            width: 35%;
 
             border-radius: 5px;
             border: none;
@@ -80,16 +80,17 @@
             font-size: 18px;
             background: #E1E1E8;
 
+            @media (max-width: 720px;) {
+                width: 50%;
+            }
+
         }
 
         .InputContainer {
             display: flex;
             justify-content: center;
-            width: 60%;
+            width: 100%;
             height: 40px;
-            gap: 10px;
-
-            display: flex;
 
             border: none;
             outline: 0;
@@ -99,32 +100,6 @@
 
             font-family: 'Roboto', sans-serif;
             font-size: 18px;
-
-            @media (max-width: 720px) {
-
-                width: 35%;
-
-                @media(max-width: 620px) {
-                    width: 50%;
-
-                    @media(max-width: 520px) {
-                        width: 60%;
-
-                        @media(max-width: 420px) {
-                            width: 70%;
-
-                            @media(max-width: 320px) {
-                                width: 80%;
-
-                            }
-
-                        }
-
-                    }
-
-                }
-
-            }
 
         }
 
@@ -347,8 +322,7 @@
         </div> <!-- Card config finish -->
 
         <div class='InputContainer'>
-            <input class='InputDDD' placeholder="DDD" maxLength={2} minLength={1} type="number" />
-            <input class='InputContact' placeholder="Seu Telefone" maxLength={10} minLength={1} type="number" />
+            <input class='InputContact' placeholder="Seu Nome" maxLength={10} minLength={1} type="number" />
         </div>
 
 
