--- a/src/Cadastro.html
+++ b/src/Cadastro.html
@@ -9,7 +9,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/phosphor-icons"></script>
-    <img src="../assets/Gas.png" alt="">
     <title>Cadastro</title>
 
     <style>
@@ -52,15 +51,10 @@
         }
 
         .Image {
-            width: 50%;
+            width: 45%;
 
             padding-bottom: 60px;
 
-            @media (max-width: 720px) {
-                padding-bottom: 40px;
-                width: 40%;
-
-            }
         }
 
 
@@ -320,7 +314,7 @@
 <body>
     <div class='Container'>
         <div class='ImageContainer'>
-            <!-- <img class='Image' src="../assets/Gas.png" alt="gas"> -->
+            <img class='Image' src="./assets/gas.png" alt="gas">
         </div>
 
 
