--- a/src/CadastroName.html
+++ b/src/CadastroName.html
@@ -9,10 +9,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/phosphor-icons"></script>
-    <img src="../assets/Gas.png" alt="">
-    <title>Cadastro</title>
-
-
+    <title>CadastroName</title>
 
     <style>
         body {
@@ -23,9 +20,8 @@
         }
 
         .Container {
-            margin: 0;
             width: auto;
-            height: auto;
+            height: 100%;
 
             display: flex;
             flex-direction: column;
@@ -38,36 +34,31 @@
 
         .ImageContainer {
             width: 100%;
-            height: 260px;
+            height: 50vh;
             display: flex;
             align-items: center;
             justify-content: center;
 
             background: #5F9DF7;
 
-            @media (max-width: 720px) {
-                height: 260px;
 
-                @media(max-width: 520px) {
-                    height: 200px;
-                }
+
+            @media(max-width: 520px) {
+                height: 200px;
             }
+
 
         }
 
         .Image {
-            width: 50%;
+            width: 45%;
 
             padding-bottom: 60px;
 
-            @media (max-width: 720px) {
-                padding-bottom: 40px;
-                width: 40%;
-
-            }
         }
 
-        .InputContact {
+
+        .InputName {
             width: 35%;
 
             border-radius: 5px;
@@ -283,7 +274,7 @@
 <body>
     <div class='Container'>
         <div class='ImageContainer'>
-            <!-- <img class='Image' src="../assets/Gas.png" alt="gas"> -->
+            <img class='Image' src="./assets/Gas.png" alt="gas">
         </div>
 
 
@@ -322,11 +313,12 @@
         </div> <!-- Card config finish -->
 
         <div class='InputContainer'>
-            <input class='InputContact' placeholder="Seu Nome" maxLength={10} minLength={1} type="number" />
+            <input class='InputName' placeholder="Seu Nome" maxLength={2} minLength={1} type="number" />
+
         </div>
 
 
-        <p class='Title'> Usaremos seu número de telefone para informá-lo(a) </p>
+        <p class='Title'> Usaremos seu Nome para informá-lo(a) </p>
         <p class='Title'> sobre sua entrega.</p>
         <div class='ButtonProps'>
             <div class='ButtonContainer'>
