--- a/src/Confirmação.html
+++ b/src/Confirmação.html
@@ -8,9 +8,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/phosphor-icons"></script>
-    <title>Document</title>
+    <title>Confirmação</title>
 </head>
 <body>
-    <H1>Compra</H1>
+    <h1>Confirmação</h1>
 </body>
 </html>
