--- a/src/Confirmacao.html
+++ b/src/Confirmacao.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/phosphor-icons"></script>
 
-    <title>Pagamento</title>
+    <title>Confirmação</title>
 
     <style>
         body {
@@ -194,58 +194,6 @@
 
         }
 
-        /* Styles cards */
-
-        .CardsContainer {
-            width: 75%;
-            height: 120px;
-            display: flex;
-            flex-direction: row;
-            justify-content: space-between;
-            background: #ffffff;
-            margin: 5px 0;
-            padding: 10px 35px 10px 20px;
-            border-radius: 5px;
-        }
-
-        .InfoContainer {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-between;
-        }
-
-        .TitleName {
-            color: #5F9DF7;
-        }
-
-        .ContentContainer {
-
-            display: flex;
-            flex-direction: row;
-            align-items: center;
-            gap: 5px;
-        }
-
-        .ImgContainer {
-            display: flex;
-            gap: 10px;
-        }
-
-        .Logoimage {
-            width: 30px;
-        }
-
-        .Title {
-            font-size: 14px;
-            font-weight: 500;
-            color: #7a7a80;
-            margin-left: 5px;
-            font-weight: bold;
-        }
-
-        .RadioBox {
-            width: 28px;
-        }
     </style>
 </head>
 
@@ -286,53 +234,10 @@
             </div>
         </div> <!-- Stap Config Finish -->
 
-        <div class="Carrinho">
-            <p class="quantidade" id="lblquantidade">1</p>
-            <div style="display: flex; flex-direction: row; gap: 4px;">
-                <p class='logoGasName' id="lbllogoGasName"> SupergasBraz</p>
-                <p class='logoGasNameContainer' id="lbllogoGasNameContainer"> - Botijão de 13kg </p>
-            </div>
-            <p class='valorNumber' id="lblvalorNumber"> R$<b>79,99 </p>
-        </div>
-
     </header> <!-- Header Config Finish -->
 
     <main>
-        <!-- Cards -->
-        <div class='CardsContainer' id="CardsContainer">
-            <div class='InfoContainer' id="InfoContainer">
-                <p class='TitleName' id="TitleName">Crédito</p>
-                <div class='ContentContainer' id="ContentContainer">
-                    <div class='ImgContainer' id="ImgContainer">
-                        <img class='Logoimage' id="Logoimage" src='./assets/Mastercard.svg' alt='' />
-                        <img class='Logoimage' id="Logoimage" src='./assets/Visa.svg' alt='' />
-                        <img class='Logoimage' id="Logoimage" src='./assets/Elo.svg' alt='' />
-                    </div>
-                </div>
-            </div class='InfoContainer' id="InfoContainer">
-            <input type="radio" class="RadioBox" id="Radio" name="1" />
-        </div class='CardsContainer' id="CardsContainer">
-        <div class='CardsContainer' id="CardsContainer">
-            <div class='InfoContainer' id="InfoContainer">
-                <p class='TitleName' id="TitleName">Débito</p>
-                <div class='ContentContainer' id="ContentContainer">
-                    <i class="ph-credit-card" style="font-size: 32px; color:#5F9DF7"></i>
-                    <p class='Title' id="Title">Pague na Entrega</p>
-                </div>
-            </div class='InfoContainer' id="InfoContainer">
-            <input type="radio" class="RadioBox" id="Radio" name="1" />
-        </div class='CardsContainer' id="CardsContainer">
-        <div class='CardsContainer' id="CardsContainer">
-            <div class='InfoContainer' id="InfoContainer">
-                <p class='TitleName' id="TitleName">Dinheiro</p>
-                <div class='ContentContainer' id="ContentContainer">
-                    <i class="ph-coins" style="font-size: 32px; color:#5F9DF7"></i>
-                    <p class='Title' id="Title">Pague na Entrega</p>
-                </div>
-            </div class='InfoContainer' id="InfoContainer">
-            <input type="radio" class="RadioBox" id="Radio" name="1" />
-        </div class='CardsContainer' id="CardsContainer">
-
+        
         <!-- Button -->
         <div class='ButtonProps'>
             <div class='ButtonContainer'>
