--- a/src/CadastroName.html
+++ b/src/CadastroName.html
@@ -59,7 +59,7 @@
 
 
         .InputName {
-            width: 35%;
+            width: 35vmax;
 
             border-radius: 5px;
             border: none;
@@ -196,6 +196,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            padding-bottom: 30px;
             width: 95%;
             height: 90%;
             padding: 15px;
@@ -318,7 +319,7 @@
         </div>
 
 
-        <p class='Title'> Usaremos seu Nome para informá-lo(a) </p>
+        <p class='Title'> Usaremos seu nome para informá-lo(a) </p>
         <p class='Title'> sobre sua entrega.</p>
         <div class='ButtonProps'>
             <div class='ButtonContainer'>
