--- a/src/Compra.html
+++ b/src/Compra.html
@@ -332,12 +332,12 @@
     <header id="headercontainer">
         <!-- Header Config -->
         <div class="headercontent">
-            <button class="ButtonBack">
+            <button class="ButtonBack" id="ButtonBack">
                 <i class="ph-caret-left" style="font-size: 24px; color: #FFFFFF; font-weight: bold;"></i>
             </button>
 
             <p class='TitleHeader'> Selecionar produto </p>
-            <button class="ButtonQuestion">
+            <button class="ButtonQuestion" id="ButtonQuestion">
                 <i class="ph-question" style="font-size: 24px; color: #FFFFFF; font-weight: bold;"
                     id="lbliconquestion"></i>
             </button>
