--- a/src/Cadastro.html
+++ b/src/Cadastro.html
@@ -236,6 +236,7 @@
             display: flex;
             flex-direction: column;
             justify-content: center;
+            padding-bottom: 30px;
             width: 95%;
             height: 90%;
             padding: 15px;
@@ -314,7 +315,7 @@
 <body>
     <div class='Container' id="ContainerCadastro">
         <div class='ImageContainer'>
-            <img class='Image' src="./assets/gas.png" alt="gas">
+            <img class='Image' src="gas.png" alt="gas">
         </div>
 
 
