--- a/src/Confirmacao.html
+++ b/src/Confirmacao.html
@@ -17,7 +17,7 @@
 
             margin: 0;
             padding: 0;
-            background-color: #E1E1E8;
+            background-color: #FFFFFF;
             font-family: 'Roboto', sans-serif;
         }
 
@@ -30,6 +30,7 @@
             justify-content: center;
             align-items: center;
             background: #FFFFFF;
+            border-bottom: 1px solid #AEAEB3;
         }
 
         main {
@@ -135,7 +136,7 @@
             display: flex;
             justify-content: center;
             align-items: center;
-            width: 50px;
+            width: 100px;
             height: 50px;
             border: none;
             background: #5F9DF7;
@@ -160,7 +161,6 @@
             justify-content: space-evenly;
             align-items: center;
             padding-top: 15px;
-
         }
 
         .stapNumber {
@@ -194,6 +194,28 @@
 
         }
 
+        /* Style Card Confirm Config */
+
+        .DataContainer {
+                width: 50vmax;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                border: 2px solid #03B252;
+                background: #efeff565;
+                border-radius: 10px;
+                margin-top: 20px;
+
+                @media(max-width: 720px; ) {
+                    width: 80%;
+                }
+            }
+
+            .title {
+                font-size: 16px;
+                font-weight: 500;
+            }
     </style>
 </head>
 
@@ -201,11 +223,11 @@
     <header id="headercontainer">
         <!-- Header Config -->
         <div class="headercontent">
-            <button class="ButtonBack">
+            <button class="ButtonBack" id="ButtonBack">
                 <i class="ph-caret-left" style="font-size: 24px; color: #FFFFFF; font-weight: bold;"></i>
             </button>
             <p class='TitleHeader'> Selecionar produto </p>
-            <button class="ButtonQuestion">
+            <button class="ButtonQuestion" id="ButtonQuestion">
                 <i class="ph-question" style="font-size: 24px; color: #FFFFFF; font-weight: bold;"
                     id="lbliconquestion"></i>
             </button>
@@ -237,20 +259,48 @@
     </header> <!-- Header Config Finish -->
 
     <main>
-        
+
+        <!-- Data Config -->
+        <div class='DataContainer' id="DataContainer">
+            <h1>Pedido Confirmado</h1>
+            <img src="./assets/concluido.png" style="width: 100px;" />
+            <h2>Resumo</h2>
+            <div class='ResumeContainer' id="ResumeContainer">
+                <h4>Nome: <p class="title" id="titleName">Gabriel Borges Olivera</p>
+                </h4>
+                <h4>Endereço: <p class="title" id="titleEndereço">Praça Miguel Ortega, 340</p>
+                </h4>
+                <h4>Bairro: <p class="title" id="titleBairro">Pq. Assunção</p>
+                </h4>
+                <h4>Complemento: <p class="title" id="titleComplemento">Loja 5</p>
+                </h4>
+                <h4>CEP: <p class="title" id="titleComplemento">06754-160</p>
+                </h4>
+                <h4>Contato: <p class="title" id="titleContato">(11) 93435-4029</p>
+                </h4>
+                <h4>Gas: <p class="title" id="titleGas">SupergasBraz - 13kg</p>
+                </h4>
+                <h4>Estabelecimento: <p class="title" id="titleEstabelecimento">Tonho Gás</p>
+                </h4>
+                <h4>Forma de Pagamento: <p class="title" id="titlePagamento">Débito</p>
+                </h4>
+                <h4>Tempo Estimado para Entrega: <p class="title" id="titleTime">15-30</p>
+                </h4>
+                <h4>Valor Total: <p class="title" id="titleValor">R$ 79,99</p>
+                </h4>
+            </div>
+        </div>
+
+        <!-- Data Config Finish-->
+
         <!-- Button -->
         <div class='ButtonProps'>
-            <div class='ButtonContainer'>
-                <buttom class="Button" id="Button">
-                    <i class="ph-caret-left" style="font-size: 24px; color: #FFFFFF; font-weight: bold;"></i>
-                </buttom>
-                <p class='TitleButton'>Voltar</p>
-            </div>
+            
             <div class='ButtonContainer'>
                 <buttom class="Button" id="Button">
                     <i class="ph-caret-right" style="font-size: 24px; color: #FFFFFF; font-weight: bold;"></i>
                 </Buttom>
-                <p class='TitleButton'>Próximo</p>
+                <p class='TitleButton'>Sair</p>
             </div>
         </div>
     </main><!-- Main Config Finish-->
