--- a/src/Home.html
+++ b/src/Home.html
@@ -158,7 +158,7 @@
     .cardDetailContainer {
       width: 95%;
       height: 100%;
-      padding-bottom: 20px;
+      padding-bottom: 30px;
       padding-left: 10px;
       padding-right: 10px;
       pointer-events: none;
@@ -174,7 +174,7 @@
     .storeDetails {
       display: flex;
       flex-direction: row;
-      justify-content: space-between
+      justify-content: space-between;
     }
 
     .noteContainer {
