--- a/src/Cadastro.html
+++ b/src/Cadastro.html
@@ -315,7 +315,7 @@
 <body>
     <div class='Container' id="ContainerCadastro">
         <div class='ImageContainer'>
-            <img class='Image' src="gas.png" alt="gas">
+            <img class='Image' src="./assets/gas.png" alt="gas">
         </div>
 
 
