--- a/src/Cadastro.html
+++ b/src/Cadastro.html
@@ -354,8 +354,8 @@
         </div> <!-- Card config finish -->
 
         <div class='InputContainer' id="InputContainer">
-            <input class='InputDDD' id="InputDDD" placeholder="DDD" maxLength={2} minLength={1} type="number" />
-            <input class='InputContact'id="InputContact" placeholder="Seu Telefone" maxLength={10} minLength={1} type="number" />
+            <input class='InputDDD' id="InputDDD" placeholder="DDD" maxLength={2} minLength={1} type="tel" />
+            <input class='InputContact'id="InputContact" placeholder="Seu Telefone" maxLength={10} minLength={1} type="tel" />
         </div>
 
 
