--- a/src/CadastroName.html
+++ b/src/CadastroName.html
@@ -314,7 +314,7 @@
         </div> <!-- Card config finish -->
 
         <div class='InputContainer' id="InputContainer">
-            <input class='InputName' id="InputName" placeholder="Seu Nome" maxLength={2} minLength={1} type="number" />
+            <input class='InputName' id="InputName" placeholder="Seu Nome" maxLength={2} minLength={1} type="text" />
 
         </div>
 
