--- a/src/Header.html
+++ b/src/Header.html
@@ -9,66 +9,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://unpkg.com/phosphor-icons"></script>
+    <link rel="stylesheet" href="./styles/header.css">
     <title>Header</title>
-
-
-    <style>
-        body {
-            margin: 0;
-            padding: 0;
-            background-color: #E1E1E8;
-            font-family: 'Roboto', sans-serif;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            height: auto;
-            background-color: #E1E1E8;
-            padding-bottom: 20px;
-            margin: 0;
-            padding: 0;
-            font-family: Roboto, sans-serif;
-        }
-
-        .header {
-            width: 100%;
-            display: flex;
-            flex-direction:
-                column;
-            justify-content: space-between;
-            background-color: #FFFFFF;
-            border-bottom: 1 solid #AEAEB3;
-        }
-
-        .headerContainer {
-            width: 90%;
-            height: 45px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-            background-color: #5F9DF7;
-            padding: 1rem 5%;
-            position: fixed;
-            z-index: 1;
-        }
-
-        .title {
-            font-size: 18px;
-            font-weight: bold;
-            margin-bottom: 10px;
-            color: #FFFFFF;
-        }
-
-        .icons {
-            display: flex;
-            justify-content: space-between;
-        }
-
-    </style>
 
 </head>
 
