--- a/src/Compra.html
+++ b/src/Compra.html
@@ -117,7 +117,7 @@
                 </div>
 
                 <Button class="ButtonAddCarrinho" id="ButtonAddCarrinho">
-                    Adicionar item ao carrinho
+                    Adicionar item 
                 </Button>
             </div>
         </main>
