--- a/src/CadastroLocation.html
+++ b/src/CadastroLocation.html
@@ -55,7 +55,7 @@
                 <option value="Ceará">Ceará</option>
             </select>
             <div class="checkbox" id="">
-                <input type="checkbox" name="datasave" id="datasave" />
+                <input class="inputCheckbox" type="checkbox" name="datasave" id="datasave" />
                 <p>Endereço Padrão</p>
             </div>
 
